[gd_scene format=3 uid="uid://08inwdgabqo"]

[ext_resource type="FontFile" uid="uid://dulp1lko3ys85" path="res://Assets/Fonts/Kenney Future.ttf" id="1_aac20"]
[ext_resource type="Texture2D" uid="uid://c44hry2vkmgmb" path="res://Assets/Textures/UI/Grey/Default/button_square_header_small_rectangle.png" id="1_f5cxw"]
[ext_resource type="Script" uid="uid://bqbkjg25i18dr" path="res://Scenes/HUD/hud.gd" id="1_q6mn5"]
[ext_resource type="FontFile" uid="uid://dqp004ff48btq" path="res://Assets/Fonts/Kenney Future Narrow.ttf" id="2_7vp6q"]
[ext_resource type="Texture2D" uid="uid://cel8hcccex1xd" path="res://Assets/Icons/GameIcons/White/1x/audioOn.png" id="2_oqfm8"]
[ext_resource type="Texture2D" uid="uid://duucbchw5aygl" path="res://Assets/Icons/Keyboard/keyboard_w_outline.png" id="4_jcn1r"]
[ext_resource type="Texture2D" uid="uid://dl6i156fjmdw5" path="res://Assets/Textures/UI/metalPanel_blue.png" id="4_uegxj"]
[ext_resource type="Texture2D" uid="uid://b1td8621cyebk" path="res://Assets/Textures/UI/metalPanel_yellow.png" id="5_nhd55"]
[ext_resource type="Texture2D" uid="uid://bpak3vh45ndnk" path="res://Assets/Icons/Keyboard/keyboard_s_outline.png" id="5_uegxj"]
[ext_resource type="StyleBox" uid="uid://d2gy6ftb1ut3v" path="res://Assets/Themes/Containers/style_box_flat_green.tres" id="6_567j1"]
[ext_resource type="Texture2D" uid="uid://vruxa5xrnsl3" path="res://Assets/Icons/GameIcons/White/1x/plus.png" id="6_iioc1"]
[ext_resource type="Texture2D" uid="uid://d35tysvxdt8n7" path="res://Assets/Textures/UI/metalPanel_red.png" id="6_q6mn5"]
[ext_resource type="Texture2D" uid="uid://djq8x85csdhd3" path="res://Assets/Icons/Keyboard/keyboard_d_outline.png" id="6_y220t"]
[ext_resource type="Texture2D" uid="uid://dxqlfi03h0kwj" path="res://Assets/Icons/Keyboard/keyboard_a_outline.png" id="7_4kltc"]
[ext_resource type="Texture2D" uid="uid://cf7i4kycf7hf3" path="res://Assets/Icons/GameIcons/White/1x/wrench.png" id="8_558d4"]
[ext_resource type="Texture2D" uid="uid://djyr0nbatdn23" path="res://Assets/Icons/Mouse/mouse_left_outline.png" id="12_8nkf1"]
[ext_resource type="AudioStream" uid="uid://qfurwlef5kgk" path="res://Assets/SFX/UI/UIMisc_Feedback 36 up_CB Sounddesign_ACTIVATION2.wav" id="14_4m1a1"]

[node name="HUD" type="Control" unique_id=536711986]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q6mn5")

[node name="TopRightHUD" type="MarginContainer" parent="." unique_id=1722121764]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16

[node name="VolumeButton" type="Button" parent="TopRightHUD" unique_id=1115489933]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_oqfm8")

[node name="BottomLeftHUD" type="MarginContainer" parent="." unique_id=396804114]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -116.0
offset_right = 544.0
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="BottomLeftHUD" unique_id=1395032427]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 12
alignment = 1

[node name="DepthMeter" type="MarginContainer" parent="BottomLeftHUD/HBoxContainer" unique_id=1356963621]
layout_mode = 2

[node name="Background" type="TextureRect" parent="BottomLeftHUD/HBoxContainer/DepthMeter" unique_id=2099537642]
texture_filter = 1
layout_mode = 2
texture = ExtResource("1_f5cxw")

[node name="TextContainer" type="VBoxContainer" parent="BottomLeftHUD/HBoxContainer/DepthMeter" unique_id=1335976704]
layout_mode = 2

[node name="LabelContainer" type="MarginContainer" parent="BottomLeftHUD/HBoxContainer/DepthMeter/TextContainer" unique_id=1782072546]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8

[node name="Label" type="RichTextLabel" parent="BottomLeftHUD/HBoxContainer/DepthMeter/TextContainer/LabelContainer" unique_id=852046057]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(0.24115604, 0.24115604, 0.24115604, 1)
theme_override_fonts/normal_font = ExtResource("2_7vp6q")
theme_override_font_sizes/normal_font_size = 12
text = "Depth"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="DepthValue" type="RichTextLabel" parent="BottomLeftHUD/HBoxContainer/DepthMeter/TextContainer" unique_id=2095096175]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.24115604, 0.24115604, 0.24115604, 1)
theme_override_fonts/normal_font = ExtResource("1_aac20")
theme_override_font_sizes/normal_font_size = 24
text = "-1000"
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inventory_Metal" type="MarginContainer" parent="BottomLeftHUD/HBoxContainer" unique_id=601277330]
layout_mode = 2

[node name="Background" type="TextureRect" parent="BottomLeftHUD/HBoxContainer/Inventory_Metal" unique_id=516928433]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_uegxj")
stretch_mode = 5

[node name="TextContainer" type="VBoxContainer" parent="BottomLeftHUD/HBoxContainer/Inventory_Metal" unique_id=1775235702]
layout_mode = 2
alignment = 1

[node name="LabelContainer" type="MarginContainer" parent="BottomLeftHUD/HBoxContainer/Inventory_Metal/TextContainer" unique_id=1692675507]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8

[node name="Label" type="RichTextLabel" parent="BottomLeftHUD/HBoxContainer/Inventory_Metal/TextContainer/LabelContainer" unique_id=1639483384]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(0.24115604, 0.24115604, 0.24115604, 1)
theme_override_fonts/normal_font = ExtResource("2_7vp6q")
theme_override_font_sizes/normal_font_size = 12
text = "Metal"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="MetalValue" type="RichTextLabel" parent="BottomLeftHUD/HBoxContainer/Inventory_Metal/TextContainer" unique_id=1892764398]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.24115604, 0.24115604, 0.24115604, 1)
theme_override_fonts/normal_font = ExtResource("1_aac20")
theme_override_font_sizes/normal_font_size = 18
text = "10/10"
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="MetalLimitContainer" type="PanelContainer" parent="BottomLeftHUD/HBoxContainer/Inventory_Metal" unique_id=2080953675]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("6_567j1")

[node name="MetalLimitIcon" type="TextureRect" parent="BottomLeftHUD/HBoxContainer/Inventory_Metal/MetalLimitContainer" unique_id=218891963]
unique_name_in_owner = true
visible = false
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("6_iioc1")

[node name="Inventory_Plastic" type="MarginContainer" parent="BottomLeftHUD/HBoxContainer" unique_id=585004403]
layout_mode = 2

[node name="Background" type="TextureRect" parent="BottomLeftHUD/HBoxContainer/Inventory_Plastic" unique_id=727709426]
texture_filter = 1
layout_mode = 2
texture = ExtResource("5_nhd55")
stretch_mode = 5

[node name="TextContainer" type="VBoxContainer" parent="BottomLeftHUD/HBoxContainer/Inventory_Plastic" unique_id=1788560591]
layout_mode = 2
alignment = 1

[node name="LabelContainer" type="MarginContainer" parent="BottomLeftHUD/HBoxContainer/Inventory_Plastic/TextContainer" unique_id=1229010508]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8

[node name="Label" type="RichTextLabel" parent="BottomLeftHUD/HBoxContainer/Inventory_Plastic/TextContainer/LabelContainer" unique_id=1964136638]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(0.24115604, 0.24115604, 0.24115604, 1)
theme_override_fonts/normal_font = ExtResource("2_7vp6q")
theme_override_font_sizes/normal_font_size = 12
text = "Plastic"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlasticValue" type="RichTextLabel" parent="BottomLeftHUD/HBoxContainer/Inventory_Plastic/TextContainer" unique_id=510413764]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.24115604, 0.24115604, 0.24115604, 1)
theme_override_fonts/normal_font = ExtResource("1_aac20")
theme_override_font_sizes/normal_font_size = 18
text = "10/10"
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlasticLimitContainer" type="PanelContainer" parent="BottomLeftHUD/HBoxContainer/Inventory_Plastic" unique_id=793450765]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("6_567j1")

[node name="PlasticLimitIcon" type="TextureRect" parent="BottomLeftHUD/HBoxContainer/Inventory_Plastic/PlasticLimitContainer" unique_id=523094028]
unique_name_in_owner = true
visible = false
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("6_iioc1")

[node name="Inventory_Wood" type="MarginContainer" parent="BottomLeftHUD/HBoxContainer" unique_id=586660560]
layout_mode = 2

[node name="Background" type="TextureRect" parent="BottomLeftHUD/HBoxContainer/Inventory_Wood" unique_id=2126712311]
texture_filter = 1
layout_mode = 2
texture = ExtResource("6_q6mn5")
stretch_mode = 5

[node name="TextContainer" type="VBoxContainer" parent="BottomLeftHUD/HBoxContainer/Inventory_Wood" unique_id=1382194318]
layout_mode = 2
alignment = 1

[node name="LabelContainer" type="MarginContainer" parent="BottomLeftHUD/HBoxContainer/Inventory_Wood/TextContainer" unique_id=701425361]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8

[node name="Label" type="RichTextLabel" parent="BottomLeftHUD/HBoxContainer/Inventory_Wood/TextContainer/LabelContainer" unique_id=2094340954]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(0.24115604, 0.24115604, 0.24115604, 1)
theme_override_fonts/normal_font = ExtResource("2_7vp6q")
theme_override_font_sizes/normal_font_size = 12
text = "Wood"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="WoodValue" type="RichTextLabel" parent="BottomLeftHUD/HBoxContainer/Inventory_Wood/TextContainer" unique_id=54035598]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.24115604, 0.24115604, 0.24115604, 1)
theme_override_fonts/normal_font = ExtResource("1_aac20")
theme_override_font_sizes/normal_font_size = 18
text = "10/10"
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="WoodLimitContainer" type="PanelContainer" parent="BottomLeftHUD/HBoxContainer/Inventory_Wood" unique_id=385191274]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("6_567j1")

[node name="WoodLimitIcon" type="TextureRect" parent="BottomLeftHUD/HBoxContainer/Inventory_Wood/WoodLimitContainer" unique_id=1604606837]
unique_name_in_owner = true
visible = false
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("6_iioc1")

[node name="SkillTreeButton" type="Button" parent="BottomLeftHUD/HBoxContainer" unique_id=1940586161]
layout_mode = 2
icon = ExtResource("8_558d4")

[node name="BottomRightHUD" type="MarginContainer" parent="." unique_id=355551372]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -327.0
offset_top = -141.0
offset_right = -9.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="BottomRightHUD" unique_id=1749482662]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BottomRightHUD/VBoxContainer" unique_id=1676926851]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BottomRightHUD/VBoxContainer/HBoxContainer" unique_id=1407872150]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 75

[node name="RichTextLabel" type="RichTextLabel" parent="BottomRightHUD/VBoxContainer/HBoxContainer/MarginContainer" unique_id=1830822923]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("2_7vp6q")
theme_override_font_sizes/normal_font_size = 32
text = "Move"
fit_content = true
vertical_alignment = 1

[node name="KeysHint" type="HBoxContainer" parent="BottomRightHUD/VBoxContainer/HBoxContainer" unique_id=1446434264]
layout_mode = 2

[node name="AKey" type="TextureRect" parent="BottomRightHUD/VBoxContainer/HBoxContainer/KeysHint" unique_id=1494784232]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
texture = ExtResource("7_4kltc")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="BottomRightHUD/VBoxContainer/HBoxContainer/KeysHint" unique_id=516562394]
layout_mode = 2
size_flags_horizontal = 3

[node name="WKey" type="TextureRect" parent="BottomRightHUD/VBoxContainer/HBoxContainer/KeysHint/VBoxContainer" unique_id=1070192368]
layout_mode = 2
texture = ExtResource("4_jcn1r")
stretch_mode = 5

[node name="SKey" type="TextureRect" parent="BottomRightHUD/VBoxContainer/HBoxContainer/KeysHint/VBoxContainer" unique_id=1516673589]
layout_mode = 2
texture = ExtResource("5_uegxj")
stretch_mode = 5

[node name="DKey" type="TextureRect" parent="BottomRightHUD/VBoxContainer/HBoxContainer/KeysHint" unique_id=1247288683]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("6_y220t")
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="BottomRightHUD/VBoxContainer" unique_id=1392782680]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BottomRightHUD/VBoxContainer/HBoxContainer2" unique_id=1135011325]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="BottomRightHUD/VBoxContainer/HBoxContainer2/MarginContainer" unique_id=1782474288]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("2_7vp6q")
theme_override_font_sizes/normal_font_size = 32
text = "CLEAN"
fit_content = true
vertical_alignment = 1

[node name="MouseHint" type="HBoxContainer" parent="BottomRightHUD/VBoxContainer/HBoxContainer2" unique_id=1555718329]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="BottomRightHUD/VBoxContainer/HBoxContainer2/MouseHint" unique_id=1018330356]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("12_8nkf1")
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="BottomRightHUD/VBoxContainer/HBoxContainer2/MouseHint" unique_id=296820827]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("2_7vp6q")
theme_override_font_sizes/normal_font_size = 16
text = "CLICK"
fit_content = true
vertical_alignment = 1

[node name="NotificationPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=1653153149]
stream = ExtResource("14_4m1a1")
volume_db = -6.0
pitch_scale = 0.6

[connection signal="pressed" from="TopRightHUD/VolumeButton" to="." method="_on_volume_button_pressed"]
[connection signal="pressed" from="BottomLeftHUD/HBoxContainer/SkillTreeButton" to="." method="_on_skill_tree_button_pressed"]
[connection signal="toggled" from="BottomLeftHUD/HBoxContainer/SkillTreeButton" to="." method="_on_skill_tree_button_toggled"]
